WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167900
Crash child processes if they receive an invalid message
https://bugs.webkit.org/show_bug.cgi?id=167900
Summary
Crash child processes if they receive an invalid message
Anders Carlsson
Reported
2017-02-06 12:40:39 PST
Crash child processes if they receive an invalid message
Attachments
Patch
(13.83 KB, patch)
2017-02-06 12:42 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2017-02-06 12:42:28 PST
Created
attachment 300751
[details]
Patch
mitz
Comment 2
2017-02-06 12:48:21 PST
Comment on
attachment 300751
[details]
Patch You should add a non-Cocoa implementation in ChildProcess.cpp so that GTK doesn’t fail to build!
Anders Carlsson
Comment 3
2017-02-06 13:51:29 PST
Committed
r211747
: <
http://trac.webkit.org/changeset/211747
>
David Kilzer (:ddkilzer)
Comment 4
2017-02-15 10:14:37 PST
<
rdar://problem/30183825
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug