Source/WebKit2/Shared/ChildProcess.cpp
@@ -196,6 +196,11 @@ void ChildProcess::platformInitialize()
 void ChildProcess::initializeSandbox(const ChildProcessInitializationParameters&, SandboxInitializationParameters&)
 {
 }
+
+void ChildProcess::didReceiveInvalidMessage(IPC::Connection&, IPC::StringReference, IPC::StringReference)
+{
+    CRASH();
+}
 #endif
 
 } // namespace WebKit
