Source/WebKit2/WebProcess/WebProcess.cpp
@@ -673,12 +673,6 @@ void WebProcess::didClose(IPC::Connection&)
     stopRunLoop();
 }
 
-void WebProcess::didReceiveInvalidMessage(IPC::Connection&, IPC::StringReference, IPC::StringReference)
-{
-    // We received an invalid message, but since this is from the UI process (which we trust),
-    // we'll let it slide.
-}
-
 WebFrame* WebProcess::webFrame(uint64_t frameID) const
 {
     return m_frameMap.get(frameID);
